# whoop-cli

./: .env.example  LICENSE  PROMPT.md  README.md  pyproject.toml
src/whoop_cli/: auth.py  cli.py  client.py  config.py  formatters.py  models.py
tests/: conftest.py  test_cli.py  test_client.py  test_formatters.py
