[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "whoop-cli"
version = "0.1.0"
description = "CLI tool to pull Whoop health data from the terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.9",
    "httpx>=0.25",
    "pydantic>=2",
    "keyring>=24",
    "rich>=13",
    "click>=8.0,<8.2",
]

[project.scripts]
whoop = "whoop_cli.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/whoop_cli"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
